--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "node-red-contrib-openhab2",
-  "version": "1.1.3",
-  "description": "openhab home automation for node-red",
+  "version": "1.1.5",
+  "description": "openhab home automation for node-red, forked from Peter De Mangelaere <peter.demangelaere@gmail.com>",
   "dependencies": {
 	"request": "latest",
 	"@joeybaker/eventsource": "latest"
   },
-  "author": "Peter De Mangelaere <peter.demangelaere@gmail.com>",
+  "author": "Jeroen Hendricksen",
   "keywords": [
     "node-red", "openhab2"
   ],
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pdmangel/node-red-contrib-openhab2.git"
+    "url": "git+https://github.com/jeroenhendricksen/node-red-contrib-openhab2.git"
   },
   "license": "Apache-2.0"
 }
