--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-openhab2",
-  "version": "1.1.5",
-  "description": "openhab home automation for node-red, forked from Peter De Mangelaere <peter.demangelaere@gmail.com>",
+  "version": "1.1.6",
+  "description": "OpenHAB home automation for node-red, forked from Peter De Mangelaere <peter.demangelaere@gmail.com>",
   "dependencies": {
     "request": "latest",
     "@joeybaker/eventsource": "latest"
