--- a/nodered/Dockerfile
+++ b/nodered/Dockerfile
@@ -4,6 +4,7 @@ USER root
 COPY docker-entrypoint.sh /
 RUN chmod a+x /docker-entrypoint.sh
 
-USER node-red
+# USER node-red
+# COPY data/package.json /data/
 
 ENTRYPOINT [ "/docker-entrypoint.sh" ]
