--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-red-contrib-openhab2",
-  "version": "1.2.0",
-  "description": "OpenHAB home automation for node-red, forked from Peter De Mangelaere <peter.demangelaere@gmail.com>",
+  "name": "node-red-contrib-openhab3",
+  "version": "1.2.1",
+  "description": "OpenHAB (v1/v2/v3) home automation for node-red, forked from Peter De Mangelaere <peter.demangelaere@gmail.com>",
   "dependencies": {
     "request": "latest",
     "@joeybaker/eventsource": "latest",
@@ -9,7 +9,7 @@
   },
   "author": "Jeroen Hendricksen",
   "keywords": [
-    "node-red", "openhab2"
+    "node-red", "openhab2", "openhab3"
   ],
   "node-red": {
     "nodes": {
