--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-openhab3",
   "version": "1.2.1",
-  "description": "OpenHAB (v1/v2/v3) home automation for node-red, forked from Peter De Mangelaere <peter.demangelaere@gmail.com>",
+  "description": "OpenHAB (v1/v2/v3) home automation for node-red, based upon node-red-contrib-openhab2 package",
   "dependencies": {
     "request": "latest",
     "@joeybaker/eventsource": "latest",
