Prevent collisions with original package

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,3 +16,20 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
+
+  register:
+    runs-on: ubuntu-latest
+    steps:
+      - run: 'echo "ToDo: Call https://flows.nodered.org/add/node"'
+
+# Node-RED requires us to announce our updated package via https:
+
+# Automating this is a little difficult, because of the required CSRF token.
+
+# 1. curl -c /tmp/cookies.txt -XGET "https://flows.nodered.org/add/node" > output.html
+# 2. Extract the CSRF token from the output.html, formatted like this: `<input id="add-node-csrf" name="_csrf" type="hidden" value="24eXJQMJ-jzJtlNX_cO01qQGx0IsC313XIEY">`
+# 3. Post:
+#     curl -c /tmp/cookies.txt -XPOST "https://flows.nodered.org/add/node"
+#     -H "Content-Type: application/x-www-form-urlencoded" 
+#     -d "module=node-red-contrib-openhab3&_csrf=TOKEN" 
+# 4. Package is updated
