--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,12 +1,14 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Publish NPM package
 
-on: push
+on: 
+  push:
+    branches:
+      - "master"
 
 jobs:
   publish:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
@@ -19,14 +21,17 @@ jobs:
 
   register:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
-      - run: 'echo "ToDo: Automate calling https://flows.nodered.org/add/node"'
-
-# Node-RED requires us to announce our updated package via https:
-#
-# Automating this is a little difficult, because of the required CSRF token.
-#
-# 1. `curl -s -c /tmp/cookies.txt -XGET "https://flows.nodered.org/add/node" > output.html`
-# 2. Extract the CSRF token from the output.html, formatted like this: `<input id="add-node-csrf" name="_csrf" type="hidden" value="TOKEN">`
-# 3. Post: `curl -s -c /tmp/cookies.txt -XPOST "https://flows.nodered.org/add/node" -H "Content-Type: application/x-www-form-urlencoded" -H "referer: https://flows.nodered.org/add/node" -H "x-requested-with: XMLHttpRequest" -d "module=node-red-contrib-openhab3&_csrf=TOKEN" > result.txt`
-# 4. Package should be updated, but it isn't.
+      - name: Install required packages
+        run: DEBIAN_FRONTEND=noninteractive sudo apt-get update -y && sudo apt-get upgrade -y curl httpie python3 python3-pip wget
+      - name: Download requires scripts into Image
+        run: curl -sS -o get_token.py "https://gist.githubusercontent.com/jeroenhendricksen/451db2a595150310b978e793d3843c43/raw/537ffd487e176da29acc45a4f649b111f7f7159b/get_token.py"
+      - name: Download requires scripts into Image
+        run: curl -sS -o update_node.sh "https://gist.githubusercontent.com/jeroenhendricksen/db60073cd7ab83f057e5d5b86e981660/raw/0641b75521a24b5d38f5538faccb7b47aaf9af3a/update_node.sh"
+      - name: Make scripts executable
+        run: chmod u+x *.py *.sh
+      - name: Print app versions
+        run: python3 --version && curl --version
+      - name: Run the scripts
+        run: ./update_node.sh
