--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "node-red-contrib-openhab3",
-  "version": "1.3.11",
-  "description": "OpenHAB (v1/v2/v3) home automation for node-red, based upon node-red-contrib-openhab2 package",
+  "version": "1.3.12",
+  "description": "OpenHAB (v2/v3) home automation for node-red, based upon node-red-contrib-openhab2 package",
   "dependencies": {
-    "request": "latest",
     "@joeybaker/eventsource": "latest",
-    "bootstrap-multiselect": "^0.9.15"
+    "bootstrap-multiselect": "^0.9.15",
+    "request": "latest"
   },
   "author": "Jeroen Hendricksen",
   "keywords": [
-    "node-red", "openhab2", "openhab3"
+    "node-red",
+    "openhab2",
+    "openhab3"
   ],
   "node-red": {
     "nodes": {
       "openhab2": "77-openhab2.js"
     }
   },
-  "scripts": {},
+  "scripts": {
+    "docker": "./run.sh",
+    "ngrok": "ngrok http 127.0.0.1:1880",
+    "lint": "eslint ./*.js"
+  },
+  "devDependencies": {
+    "eslint": "^4.12.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jeroenhendricksen/node-red-contrib-openhab3.git"
