--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -25,9 +25,9 @@ jobs:
     steps:
       - name: Install required packages
         run: DEBIAN_FRONTEND=noninteractive sudo apt-get update -y && sudo apt-get install -y curl httpie python3 python3-pip wget
-      - name: Download requires scripts into Image
+      - name: Download required scripts into Image
         run: curl -sS -o get_token.py "https://gist.githubusercontent.com/jeroenhendricksen/451db2a595150310b978e793d3843c43/raw/get_token.py"
-      - name: Download requires scripts into Image
+      - name: Download required scripts into Image
         run: curl -sS -o update_node.sh "https://gist.githubusercontent.com/jeroenhendricksen/db60073cd7ab83f057e5d5b86e981660/raw/update_node.sh"
       - name: Make scripts executable
         run: chmod u+x *.py *.sh
