--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "docker": "./run.sh",
     "ngrok": "ngrok http 127.0.0.1:1880",
-    "lint": "eslint ./*.js"
+    "lint": "eslint ./*.js",
+    "jshint": "jshint --reporter=jslint --verbose 77-openhab2.js"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
