--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,7 +6,7 @@ on:
       - "master"
 
 jobs:
-  npm-run-jshint:
+  npm_run_jshint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -16,7 +16,7 @@ jobs:
       - run: npm install --only=dev
       - run: npm run jshint
       
-  publish:
+  build_and_publish_npm_package:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
@@ -29,7 +29,7 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
 
-  register:
+  register_npm_package_with_nodered:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
