--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-red-contrib-openhab3",
-  "version": "1.3.18",
+  "version": "1.3.19",
   "description": "OpenHAB (v2/v3) home automation for node-red, based upon node-red-contrib-openhab2 package",
   "dependencies": {
-    "@joeybaker/eventsource": "latest",
     "bootstrap-multiselect": "^1.1.0",
+    "eventsource": "^1.1.0",
     "request": "latest"
   },
   "author": "Jeroen Hendricksen",
