--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "node-red-contrib-openhab3",
-  "version": "1.3.18",
+  "version": "1.3.20",
   "description": "OpenHAB (v2/v3) home automation for node-red, based upon node-red-contrib-openhab2 package",
   "dependencies": {
-    "@joeybaker/eventsource": "latest",
+    "axios": "^0.24.0",
     "bootstrap-multiselect": "^1.1.0",
-    "request": "latest"
+    "eventsource": "^1.1.0"
   },
   "author": "Jeroen Hendricksen",
   "keywords": [
