--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,9 @@
 name: Publish NPM package
 
-on: 
+on:
   push:
-    branches:
-      - "master"
+    tags:
+      - v*.*.*
 
 jobs:
   npm_run_jshint:
@@ -12,18 +12,18 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 17
       - run: npm install --only=dev
       - run: npm run jshint
       
   build_and_publish_npm_package:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    if: "!contains(github.event.head_commit.message, 'skip')"
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 17
       - run: npm install\
       - uses: JS-DevTools/npm-publish@v1
         with:
@@ -31,7 +31,7 @@ jobs:
 
   register_npm_package_with_nodered:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'ci skip')"
+    if: "!contains(github.event.head_commit.message, 'skip')"
     steps:
       - name: Install required packages
         run: DEBIAN_FRONTEND=noninteractive sudo apt-get update -y && sudo apt-get install -y curl httpie python3 python3-pip wget
