--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "openhab2",
     "openhab3"
   ],
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "node-red": {
+    "version": ">=2.0.0",
     "nodes": {
       "openhab2": "77-openhab2.js"
     }
