--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "node-red-contrib-openhab3",
-  "version": "1.3.35",
+  "version": "1.3.36",
   "description": "OpenHAB (v2/v3) home automation for node-red, based upon node-red-contrib-openhab2 package",
   "dependencies": {
-    "axios": "^0.24.0",
-    "bootstrap-multiselect": "^1.1.0",
-    "eventsource": "^1.1.0"
+    "axios": "^0",
+    "bootstrap-multiselect": "^1",
+    "eventsource": "^2"
   },
   "author": "Jeroen Hendricksen",
   "keywords": [
@@ -25,14 +25,16 @@
   "scripts": {
     "docker": "./run.sh",
     "ngrok": "ngrok http 127.0.0.1:1880",
-    "lint": "eslint ./*.js",
+    "lint": "eslint ./*.js --fix",
     "jshint": "jshint --reporter=jslint --verbose 77-openhab2.js",
     "release": "release-it"
   },
   "devDependencies": {
-    "eslint": "^8.8.0",
-    "jshint": "^2.13.4",
-    "release-it": "^14.12.4"
+    "eslint": "^8",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jshint": "^2",
+    "release-it": "^14"
   },
   "repository": {
     "type": "git",
