--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 17
       - run: npm install --only=dev
-      - run: npm run jshint
+      - run: npm run lint
       
   build_and_publish_npm_package:
     runs-on: ubuntu-latest
