Add support for OH 3.3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: "3.9"
 
 services:
   nodered:
@@ -37,7 +37,7 @@ services:
       - "JAVA_OPTS=-Dlog4j2.formatMsgNoLookups=true"
 
   openhab3:
-    build: openhab3/
+    build: openhab3.2/
     networks: [ "nodered" ]
     ports:
       - "8081:8080"
@@ -63,7 +63,7 @@ services:
       - GROUP_ID=9001
 
   openhab3-oauth2:
-    build: openhab3/
+    build: openhab3.2/
     networks: [ "nodered" ]
     ports:
       - "8082:8080"
@@ -82,12 +82,40 @@ services:
       - USER_ID=9001
       - GROUP_ID=9001
 
+  openhab33:
+    build: openhab3.3/
+    networks: [ "nodered" ]
+    ports:
+      - "8083:8080"
+    volumes:
+      - type: bind
+        source: ./test/openhab/conf/items
+        target: /openhab/conf/items
+      - type: bind
+        source: ./test/openhab/conf/persistence
+        target: /openhab/conf/persistence
+      - type: bind
+        source: ./test/openhab/conf/services
+        target: /openhab/conf/services
+      - type: volume
+        source: openhab33-userdata
+        target: /openhab/userdata
+      - type: volume
+        source: openhab33-addons
+        target: /openhab/addons
+    environment:
+      - CRYPTO_POLICY=unlimited
+      - USER_ID=9001
+      - GROUP_ID=9001
+
 volumes:
   nodered-data:
   openhab2-addons:
   openhab2-userdata:
   openhab3-addons:
   openhab3-userdata:
+  openhab33-addons:
+  openhab33-userdata:
   openhab3-oauth2-addons:
   openhab3-oauth2-userdata:
 
