--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-openhab3",
   "version": "1.4.1",
-  "description": "OpenHAB (v2/v3) home automation for node-red, based upon node-red-contrib-openhab2 package",
+  "description": "OpenHAB v3 home automation for node-red, based upon node-red-contrib-openhab2 package",
   "dependencies": {
     "axios": "^0",
     "bootstrap-multiselect": "^1",
